phpMyFAQ 2.6.11
Codename "Portia"

CHANGELOG

This is a log of major user-visible changes in each phpMyFAQ release.

Version 2.6.12 - 2010-
- 

Version 2.6.11 - 2010-11-03
- fixed some bugs introduced with phpMyFAQ 2.6.10 (Thorsten)

Version 2.6.10 - 2010-11-02
- added several security enhancements (Thorsten)
- updated Chinese (Simplified) translation
- updated German translation (Thorsten)
- updated Portuguese translation (Fernando G. Monteiro)
- fixed minor bugs (Thorsten)

Version 2.6.9 - 2010-09-28
- fixed XSS vulnerability (Yam Mesicka, Thorsten)
- added Slovak translation (Tibor)
- added minor usability improvement in administration backend (Thorsten)
- fixed issue with embedded Google Analytics code (Thorsten)

Version 2.6.8 - 2010-08-31
- dropped Oracle database support (Thorsten)
- added new TinyMCE plugin for adding internal links by a suggest search (Thorsten)
- added basic HTML5 powered administration backend (Thorsten) 
- improved setup and update functionality (Thorsten, Bram)
- updated bundled TCPDF library to version 5.6.000 (Thorsten)
- updated bundled TinyMCE editor component to version 3.3.8 (Thorsten)
- updated bundled phpseclib to version 0.2.1 (Thorsten)
- updated Russian translation
- updated Portuguese translation
- fixed XML rendering issue (Thorsten)
- fixed many bugs (Thorsten, Bram)
    
Version 2.6.7 - 2010-07-29
- refactored search backend (Thorsten)
- improved pagination functionality (Thorsten)
- fixed various problems with Microsoft SQL Server Driver for PHP (Thorsten)
- fixed minor bugs (Thorsten, Aaron Burgie)

Version 2.6.6 - 2010-06-21
- refactored database abstraction (Thorsten)
- fixed OpenLDAP authentication (Franky)
- fixed duplication of search results (Aaron Burgie)
- fixed issue with duplicate sitemap characters (Aaron Burgie)
- fixed solution ID issues (Thorsten)
- Improved Glossary deletion workflow (Thorsten)
- updated Brazilian Portuguese translation
- updated Norwegian Bokmål translation