@@ -1,0 +1,7 @@
+<?php
+$DB["server"] = '/Users/thorsten/WWW/htdocs/phpMyFAQ-2.6/phpmyfaq/config/phpmyfaq.db';
+$DB["user"] = '';
+$DB["password"] = '';
+$DB["db"] = '';
+$DB["prefix"] = '';
+$DB["type"] = 'sqlite';
