@@ -182,9 +182,9 @@
         <a href="http://www.microsoft.com/">IIS</a> 5.0+)</li>
         <li><strong>Database server</strong>
         <ul>
-            <li><a href="http://www.mysql.com">MySQL</a> 4.1.x, 5.x, 6.x with the
+            <li><a href="http://www.mysql.com">MySQL</a> 4.1.x and 5.x with the
             MySQL extension  (recommended: 5.1.x)</li>
-            <li><a href="http://www.mysql.com">MySQL</a> 4.1.x, 5.x, 6.x with the
+            <li><a href="http://www.mysql.com">MySQL</a> 4.1.x and 5.x with the
             MySQLi extension (recommended: 5.1.x)</li>
             <li><a href="http://www.postgresql.org">PostgreSQL</a> 7.2+, 8.x
             (recommended: latest 8.x)</li>
@@ -196,10 +196,9 @@
             IBM Cloudscape</a>, and <a href="http://db.apache.org/derby/">
             Apache Derby</a></li>
             <li><a href="http://www.sqlite.org">SQLite</a></li>
-            (experimental)</li>
+            <li><a href="http://montyprogram.com/mariadb/">MariaDB</a> 5.x (experimental)</li>
             <li><a href="http://www.firebirdsql.org">Firebird</a> /
-            <a href="http://www.codegear.com/products/interbase">Interbase</a>
-            (experimental)</li>
+            <a href="http://www.codegear.com/products/interbase">Interbase</a> (experimental)</li>
         </ul></li>
         <li>correctly set: access permissions, owner, group</li>
     </ul>
