@@ -6,7 +6,8 @@ CHANGELOG
 This is a log of major user-visible changes in each phpMyFAQ release.
 
 Version 2.6.12 - 2010-
-- 
+- added experimental support for MariaDB (Thorsten)
+- fixed minor bugs (Thorsten)
 
 Version 2.6.11 - 2010-11-03
 - fixed some bugs introduced with phpMyFAQ 2.6.10 (Thorsten)
